<!--
  ~ Copyright 2019-2020 by Heiko Schäfer <heiko@rangun.de>
  ~
  ~  This file is part of android-webvirus.
  ~
  ~  android-webvirus is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU Lesser General Public License as
  ~  published by the Free Software Foundation, either version 3 of
  ~  the License, or (at your option) any later version.
  ~
  ~  android-webvirus is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU Lesser General Public License for more details.
  ~
  ~  You should have received a copy of the GNU Lesser General Public License
  ~  along with android-webvirus.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~  Last modified 03.11.19 09:11 by heiko
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Webvirus</string>
    <string name="fetchURLBase" tools:keep="@string/fetchURLBase">https://rangun.de/db/</string>
    <string name="title">Heikos Schrott- &amp; Rentnerfilme</string>
    <string name="version">✋ Die Zombieboxversion ✋</string>
    <string name="copyright">© %1$s by Heiko Schäfer – v%2$s%3$s</string>
    <string name="loading_teaser">Eine hirnlose App, exakt – ohne jegliche Hirnleistung – ertippt und erklickt, wie der Prof es vorgelesen hatte!</string>
    <string name="loading_text">Beweise das Halteproblem. Bitte warten …</string>
    <string name="m.title">Movie title here</string>
    <string name="m.id">#0000</string>
    <string name="m.disc">DVD</string>
    <string name="cover.desc">TODO</string>
    <string name="m.duration">Länge</string>
    <string name="top250.desc">TODO</string>
    <string name="movie_abstract">TMDb Kurzbeschreibung</string>
    <string name="fetch_abstract">"Hole Kurzbeschreibung von TMDb …"</string>
    <string name="no_abstract">Aufgrund fehlender Intelligenz kann Webvirus keine Kurzbeschreibung für Dich erfinden.</string>
    <string name="searchboxhint">Suchbegriff(e) oder /regulärer Ausdruck/</string>
    <string name="notfound"><b>Du kannst nur nach Schrott- oder Rentnerfilmen suchen. Somit habe ich Deinen hippen Film nicht gefunden.</b></string>
    <string name="loading">Lade hirnlose Schrott- oder Rentnerfilme …</string>
    <string name="loaded" tools:ignore="PluralsCandidate">%1$d hirnlose Schrott- oder Rentnerfilme geladen.</string>
    <string name="not_connected">Facebook und Google mögen es können, aber Webvirus fehlt die Intelligenz <b>OHNE</b> Internetverbindung Daten aus dem Internet zu laden.</string>
    <string name="no_filename">Video-DVD</string>
    <string name="categoryAny">Alle Videos</string>
    <string name="categoryFeature">Spielfilm</string>
    <string name="categoryYouth">Märchen- oder Jugendfilm</string>
    <string name="categoryDocumentary">Dokumentation</string>
    <string name="categoryConcert">Konzert</string>
    <string name="colognesuggests">hirnlose Rentnerfilmvorschläge op Kölsch</string>
    <string name="bksuggests">hirnlose Rentnerfilmvorschläge von Burkhard und Kellers Baum</string>
    <string name="rexsuggests">hirnlose Rentnerfilmvorschläge vom unbewiesenen Halteproblem</string>
    <string name="reload">Lade hirnlose Rentnerfilme neu</string>
    <string name="network_error">hirnloser Fähler: <b>%1$s</b></string>
    <string name="new_movies" tools:ignore="PluralsCandidate">%1$d neue hirnlose Schrott- bzw. Rentnerfilme sind leider verfügbar 😭</string>
    <string name="notification_default_name">Allgemeine Logik</string>
    <string name="notification_default_desc">Es wird nur die Logik der Allgemeinheit benötigt</string>
    <string name="notification_high_name">Promotion in Informatik</string>
    <string name="notification_high_desc">Es wird mindestens ein Doktorgrad in Informatik benötigt</string>
    <string name="notification_min_name">Hip</string>
    <string name="notification_min_desc">Hippe Zombieboxbenutzer verstehen dies</string>
    <string name="notification_low_name">Altmodisch</string>
    <string name="notification_low_desc">Altmodische Smartphonenutzer mögen dies</string>
    <string name="tab_details">hirnlose Details</string>
    <string name="tab_list">intelligenzfreie Rentnerfilmliste</string>
    <string name="tab_new">neue Schrott- bzw. Rentnerfilme</string>
    <string name="open_in_db">in hippen Browser ansehen</string>
    <string name="url_copy_ok">Schrott- bzw. Rentnerfilm in die Zwischenablage verfrachtet</string>
    <string name="url_copy_fail">Mangels Intelligenz konnte ich den Schrott- bzw. Rentnerfilm NICHT in die Zwischenablage verfrachten</string>
    <string name="action_title">%1$s – %2$s</string>
    <string name="settings">hirnlose Einstellungen</string>
    <string name="settings_title">Informatikdiplombereich</string>
    <string name="fetching">Mangels jeglicher Intelligenz muss ich eben nachsehen, ob neue Schrott- bzw. Rentnerfilm da sind 😭</string>
    <string name="choose_order_mail">Deine eMail-Adresse für zukünftige hirnlose Schrott- &amp; Rentnerfilmbestellungen:</string>
    <string name="invalid_order_mail">&quot;%1$s&quot; ist sicher ein hippes Konto, nur kann Webvirus - mangels jeglicher Intelligenz - damit keine hirnlosen Schrott- bzw. Rentnerfilmbestellungen bearbeiten.</string>
</resources>
