<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 by Heiko Schäfer <heiko@rangun.de>
  ~
  ~  This file is part of android-webvirus.
  ~
  ~  android-webvirus is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU Lesser General Public License as
  ~  published by the Free Software Foundation, either version 3 of
  ~  the License, or (at your option) any later version.
  ~
  ~  android-webvirus is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU Lesser General Public License for more details.
  ~
  ~  You should have received a copy of the GNU Lesser General Public License
  ~  along with android-webvirus.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~  Last modified 02.10.19 13:48 by heiko
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingTop="8dp">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cover.desc"
                android:maxWidth="150dp"
                android:scaleType="fitStart"
                app:layout_constraintBottom_toTopOf="@id/m.abstract"
                app:layout_constraintEnd_toStartOf="@+id/m.id"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/nocover"
                tools:layout_height="150dp"
                tools:layout_width="150dp" />

            <TextView
                android:id="@+id/m.id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/m.id"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic"
                app:fontFamily="monospace"
                app:layout_constraintEnd_toStartOf="@+id/top250"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/cover"
                app:layout_constraintTop_toTopOf="@id/cover" />

            <ImageView
                android:id="@+id/top250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/top250.desc"
                android:foregroundGravity="right"
                app:layout_constraintBottom_toBottomOf="@+id/m.id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/m.id"
                app:layout_constraintTop_toTopOf="@id/m.id"
                app:srcCompat="@drawable/top250" />

            <de.rangun.webvirus.widgets.CategoryTextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/m.title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/categoryAny"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@id/top250"
                app:layout_constraintStart_toStartOf="@+id/m.id"
                app:layout_constraintTop_toBottomOf="@id/m.id" />

            <TextView
                android:id="@+id/m.duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/m.duration"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/m.disc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/m.disc"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/m.duration" />

            <TextView
                android:id="@+id/languages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toStartOf="@+id/filename"
                app:layout_constraintStart_toStartOf="@+id/m.duration"
                app:layout_constraintTop_toBottomOf="@+id/m.duration"
                tools:text="lingos" />

            <TextView
                android:id="@+id/filename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/m.disc"
                app:layout_constraintTop_toTopOf="@+id/languages" />

            <de.rangun.webvirus.widgets.CategoryTextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/categoryAny"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/categoryAny"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@+id/m.abstract"
                app:layout_constraintEnd_toEndOf="@+id/filename"
                app:layout_constraintStart_toStartOf="@+id/languages"
                app:layout_constraintTop_toBottomOf="@+id/languages" />

            <TextView
                android:id="@+id/m.abstract"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/movie_abstract"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                android:typeface="normal"
                app:autoSizeTextType="uniform"
                app:fontFamily="sans-serif-medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/cover" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/openInDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/open_in_db"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/copyURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/copyUrl"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>